# aero_srr_13

./: .gitignore  README.md  development.txt  oryxsrr.launch  stack.xml
aero_drive_controller/: CMakeLists.txt  manifest.xml  package.xml
aero_drive_controller/action/: TranslateCommand.action
aero_drive_controller/doc/: manifest.yaml
aero_drive_controller/doc/html/: ArcDriveController_8cpp.html  ArcDriveController_8cpp__incl.map  ArcDriveController_8h.html  ArcDriveController_8h__dep__incl.map  ArcDriveController_8h__dep__incl.md5  ArcDriveController_8h__incl.md5  ArcDriveController_8h_source.html  TranslateControlServer_8cpp.html  TranslateControlServer_8cpp__incl.md5  TranslateControlServer_8h.html  TranslateControlServer_8h__dep__incl.map  TranslateControlServer_8h__dep__incl.md5  TranslateControlServer_8h__incl.map  TranslateControlServer_8h__incl.md5  TranslateControlServer_8h_source.html  TranslateControlServer__test_8cpp__incl.map  TranslateControlServer__test_8cpp__incl.md5  TranslateControlServer__test_8cpp_source.html  VelocityControlServer_8cpp__incl.map  VelocityControlServer_8cpp__incl.md5  VelocityControlServer_8h.html  VelocityControlServer_8h__dep__incl.md5  VelocityControlServer_8h__incl.md5  VelocityControlServer_8h_source.html  VelocityControlServer__test_8cpp_source.html  classArcDriveController-members.html  classArcDriveController.html  classTranslateControlServer.html  classVelocityControlServer-members.html  classVelocityControlServer.html  files.html  formula.repository  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  (+10 more)
aero_drive_controller/include/: ArcDriveController.h  TranslateControlServer.h  VelocityControlServer.h
aero_drive_controller/msg/: VelocityArc.msg
aero_drive_controller/src/controllers/: ArcDriveController.cpp
aero_drive_controller/src/nodes/: oryx_drive_controller.cpp  oryx_drive_controller_action_tests.cpp
aero_drive_controller/src/translate_command/: TranslateControlServer.cpp  TranslateControlServer_test.cpp
aero_drive_controller/src/velocity_command/: VelocityControlServer.cpp
aero_path_planning/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
aero_path_planning/cfg/: LocalPlanner.cfg  MissionPlanner.cfg
aero_path_planning/doc/html/: OccupancyGrid_8cpp__incl.map  OccupancyGrid_8h__dep__incl.map  OccupancyGrid_8h__dep__incl.md5  OccupancyGrid_8h__incl.md5  OccupancyGrid_8h_source.html  OryxPathPlanningUtilities_8h__dep__incl.md5  OryxPathPlanningUtilities_8h__incl.map  OryxPathPlanningUtilities_8h__incl.md5  OryxPathPlanningUtilities_8h_source.html  OryxPathPlanning_8h.html  OryxPathPlanning_8h__dep__incl.md5  OryxPathPlanning_8h__incl.md5  PointConverter_8hpp__incl.map  PointConverter_8hpp__incl.md5  Tentacle__test_8cpp.html  files.html  (+59 more)
aero_path_planning/include/: OccupancyGrid.h  Tentacles.h  TypeDefinitions.h
aero_path_planning/launch/: aero_global_planner.launch  aero_local_planner.launch  aero_path_planning.launch  oryx_local_planner.launch  oryx_path_planning.launch
aero_path_planning/msg/: OccupancyGridMsg.msg
aero_path_planning/src/: AeroPathPlanningParameters.h.in  CMakeLists.txt
aero_path_planning/test/: AStarCarrotTest.cpp  AeroPathPlanningTests.cpp  CMakeLists.txt  CarrotPathFinderTest.cpp  CastLineTest.cpp  FitnessQueueTest.cpp  OccupancyGridTest.cpp  RRTCarrotTest.cpp  TentacleRateLimitTest.cpp
aero_srr_bringup/: CMakeLists.txt  manifest.xml  package.xml
aero_srr_bringup/launch/: aero_srr_bringup.launch  aero_srr_image_proc.launch  aero_srr_laser.launch  aero_srr_logging.launch  aero_srr_odometry.launch  aero_srr_rect.launch  aero_srr_supervisor.launch  hokuyo.launch  oryx_srr_bringup.launch  srr_bringup.launch  stereo.launch
aero_srr_gui/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
aero_srr_gui/src/: main.cpp  main_window.cpp  qnode.cpp
aero_srr_msgs/: CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
aero_srr_msgs/msg/: AeroState.msg  ObjectLocationMsg.msg
aero_srr_msgs/srv/: StateTransitionRequest.srv
object_locator/src/: CMakeLists.txt  ObjectLocatorParams.h.in
oryx_drive_controller/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
oryx_drive_controller/action/: translate_command.action  velocity_command.action
oryx_drive_controller/launch/: oryx_drive_controller.launch
oryx_drive_controller/msg/: TranslateCommandAction.msg  TranslateCommandActionFeedback.msg  TranslateCommandActionGoal.msg  TranslateCommandActionResult.msg  TranslateCommandFeedback.msg  TranslateCommandGoal.msg  VelocityCommandAction.msg  VelocityCommandActionFeedback.msg  VelocityCommandActionGoal.msg  VelocityCommandActionResult.msg  VelocityCommandFeedback.msg  VelocityCommandGoal.msg  VelocityCommandResult.msg  VelocityTranslate.msg
oryx_drive_controller/src/: OryxDriveControllerConfig.h.in  oryx_drive_controller.cpp
oryxsrr_msgs/: CMakeLists.txt  cmake_install.cmake  manifest.xml  manifest.xml~  package.xml  package.xml~
oryxsrr_msgs/doc/: manifest.yaml
oryxsrr_msgs/msg/: OccupancyGrid.msg
oryxsrr_msgs/srv/: Command.srv
roboteq_driver/: CMakeLists.txt  Makefile  manifest.xml
roboteq_driver/cfg/: Roboteq.cfg
roboteq_driver/launch/: AERO.launch
roboteq_driver/msg/: RoboteqFeedback.msg  RoboteqGroupInfo.msg  RoboteqGroupMotorControl.msg  RoboteqMotorControl.msg  RoboteqMotorFeedback.msg  RoboteqMotorInfo.msg
roboteq_driver/src/: roboteq_manager.cpp  roboteq_manager_lib.cpp  roboteq_motor_controller.cpp  serial_lib.cpp
vision_comm/: CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
vision_comm/example/: monocam.cpp  pubcam.cpp  rosbridge.cpp  rosstereobridge.cpp  stereocam.cpp  topic2pic.cpp
vision_comm/launch/: camera.launch  set_master.launch  stereo.launch  test.launch
vision_comm/src/: IOImages.cpp  MonoCam.cpp  PicSet.cpp  RosBridge.cpp  RosStereoBridge.cpp  StereoCam.cpp  camera_config.cpp
(+3244 files in other folders)
