<package>
  <name>aero_srr_gui</name>
  <version>1.0.0</version>
  <description>

     GUI elements used by the aero_srr stack for visualization of system processes

  </description>
  <maintainer email="robot@wpi.edu">RIVeR Lab</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/aero_srr_gui</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>oryx_msgs</build_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>libqt4-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>oryx_msgs</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>libqt4-dev</run_depend>

</package>
