<package>
  <name>aero_srr_msgs</name>
  <version>1.0.0</version>
  <description>

     Message definitions used by the aero_srr stack

  </description>
  <maintainer email="robot@wpi.edu">RIVeR Lab</maintainer>
  <license>BSD</license>
  <url>http://robot.wpi.edu/wiki/aero_srr_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>oryx_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>oryx_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>


