#build nodes
rosbuild_add_executable(aero_path_planning_test orxy_path_planning_test.cpp)
target_link_libraries(aero_path_planning_test OccupancyGrid Tentacles)

#Build the Local Planner Node
rosbuild_add_executable(aero_local_planner aero_local_planner.cpp)
target_link_libraries(aero_local_planner LocalPlanner)

#Build the Occupancy Generator test node
rosbuild_add_executable(occupancy_generator occupancy_generator.cpp)
target_link_libraries(occupancy_generator OccupancyGrid AeroUtilities)

#Build the Oryx Global Panner node
rosbuild_add_executable(oryx_global_planner oryx_global_planner.cpp)
target_link_libraries(oryx_global_planner GlobalPlanner)

#Build the Aero global planner node
rosbuild_add_executable(aero_global_planner aero_global_planner.cpp)
target_link_libraries(aero_global_planner GlobalPlanner)

#Build the occupancy visualizer node
rosbuild_add_executable(occupancy_visualizer_node occupancy_visualizer_node.cpp)
target_link_libraries(occupancy_visualizer_node OccupancyGrid OccupancyVisualizer)